test/fail_compilation/fail303.d
void main() {
  ireal x = 3.0i;
  double y=3;
  y /= 2.0 + 6i;
  x *= 7.0i;
  x *= 3.0i+2; 
  x %= (2+ 6.0i);
  x += 2.0;
  x -= 1+4i;  
  y -= 3.0i;
}

